# skedule

./: .gitignore  README.md  create_dummy_data.py  drop_create_db.py  knowledge.md  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: lint.yml  python-package.yml  test.yml
cso/: __init__.py  config.py  models.py  utils.py
cso/admin/: forms.py  routes.py
cso/api/: routes.py
cso/errors/: handlers.py
cso/main/: routes.py
cso/static/: main.css  main.js
cso/templates/: add_shift.html  configure_schedule.html  dashboard.html  edit_shift.html  layout.html  login.html  register.html  schedule.html  shift.html  template_manager.html
cso/users/: forms.py  routes.py
devtools/: __init__.py  common.py  dbshell.py  dev.py  dummydata.py  lint.py  localdb.py
skedule/: __init__.py  config.py  features.py  lint.py  models.py  permissions.py  utils.py
skedule/admin/: forms.py  knowledge.md  routes.py
skedule/api/: knowledge.md  routes.py
skedule/errors/: handlers.py
skedule/main/: knowledge.md  routes.py
skedule/static/: auth.css  auth.js  live-save.js  main.css  main.js
skedule/templates/: add_shift.html  assignment_table.html  configure_schedule.html  dashboard.html  discussion.html  edit_shift.html  edit_template.html  feature_detail.html  feature_log_builder.html  features.html  layout.html  leaderboard.html  log.html  log_detail.html  login.html  notifications.html  pending_requests.html  roster.html  (+7 more)
tests/: conftest.py  test_admin_routes.py  test_api_routes.py  test_config.py  test_main_routes.py  test_user_routes.py  test_utils.py
(+18 files in other folders)
